rework loadBoard to use BoardLoader